--- a/app/views/tweet/index.html.erb
+++ b/app/views/tweet/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Tweet#index</h1>
-<p>Find me in app/views/tweet/index.html.erb</p>
+<div style='width: 800px;'>
+  <div id="map" style='width: 800px; height: 400px;'></div>
+</div>
+
+<script type="text/javascript">
+handler = Gmaps.build('Google');
+handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+  markers = handler.addMarkers(<%=raw @hash.to_json %>);
+  handler.bounds.extendWith(markers);
+  handler.fitMapToBounds();
+});
+</script>
+
