--- a/app/views/map_test/index.html.erb
+++ b/app/views/map_test/index.html.erb
@@ -1,32 +1,32 @@
 <div style='width: 800px;'>
   <div id="map" style='width: 800px; height: 400px;'></div>
 </div>
+<div style='width: 800px;'>
+    <div id="directions" style='width: 800px; height: 400px;'></div>
+  </div>
 
 <script type='text/javascript'>
-// handler = Gmaps.build('Google');
-// handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+handler = Gmaps.build('Google');
+handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
 
     
-//   markers = handler.addMarkers([
-//     {
-//       "lat": 34.645842,
-//       "lng": 135.513971,
-//       "picture": {
-//         "url": "https://addons.cdn.mozilla.net/img/uploads/addon_icons/13/13028-64.png",
-//         "width":  36,
-//         "height": 36
-//       },
-//       "infowindow": "hello!"
-//     }
-//   ]);
-//   handler.bounds.extendWith(markers);
-//   handler.fitMapToBounds();
-// });
+    markers = handler.addMarkers(
+        [
+            {
+              "lat": 34.645842,
+              "lng": 135.513971,
+              "picture": {
+                // "url": "https://addons.cdn.mozilla.net/img/uploads/addon_icons/13/13028-64.png",
+                "width":  36,
+                "height": 36
+              },
+              "infowindow": "<a href='http://google.com'>Asan</a><br>XXXXXXXXXXXXXXXXXXXXXXXXXXXX"
+            }
+        ]
+    )
+    handler.bounds.extendWith(markers);
+    handler.fitMapToBounds();
+    });
 
-var map = new GMaps({
-    div: "#map",
-    lat: 35.710285,
-    lng: 139.77714,
-    zoom: 15,
-});
+
 </script>
