tweet表示画面ちょっと修正

--- a/app/views/partial/_tweets_view.html.erb
+++ b/app/views/partial/_tweets_view.html.erb
@@ -17,14 +17,14 @@ $(function() {
 });
 </script>
 
-<div id="tweets_window" style="float:right; width:400px">
-  <div id="tweet0"></div>
+<div id="tweets_window" style="float:right; width:400px;border:solid;">
+  <div id="tweet0" style="border-bottom:solid"></div>
 <br>
-  <div id="tweet1"></div>
+  <div id="tweet1" style="border-bottom:solid"></div>
 <br>
-  <div id="tweet2"></div>
+  <div id="tweet2" style="border-bottom:solid"></div>
 <br>
-  <div id="tweet3"></div>
+  <div id="tweet3" style="border-bottom:solid"></div>
 <br>
-  <div id="tweet4"></div>
+  <div id="tweet4" style="border-bottom:solid"></div>
 </div>
