--- a/app/views/map_test/index.html.erb
+++ b/app/views/map_test/index.html.erb
@@ -1,35 +1,42 @@
 <script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
 <script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
-<script type='text/javascript'>
-handler = Gmaps.build('Google');
-handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
-
-    
-    markers = handler.addMarkers(
-        [
-            {
-              "lat": 34.645842,
-              "lng": 135.513971,
-              "picture": {
-                // "url": "https://addons.cdn.mozilla.net/img/uploads/addon_icons/13/13028-64.png",
-                "width":  36,
-                "height": 36
-              },
-              "infowindow": "<a href='http://google.com'>Asan</a><br>XXXXXXXXXXXXXXXXXXXXXXXXXXXX"
-            }
-        ]
-    )
-    handler.bounds.extendWith(markers);
-    handler.fitMapToBounds();
-    });
-
-
-</script> 
 
 <div style='width: 800px;'>
   <div id="map" style='width: 800px; height: 400px;'></div>
 </div>
 <div style='width: 800px;'>
-    <div id="directions" style='width: 800px; height: 400px;'></div>
-  </div>
+  <div id="directions" style='width: 800px; height: 400px;'></div>
+</div>
+
+<script type='text/javascript'>
+  var myMap = new google.maps.Map(document.getElementById("map"), {
+    //ズームレベル
+    zoom: 14,
+    //中心点緯度経度
+    center: new google.maps.LatLng(35.701306, 139.700044),
+    //距離目盛りの表示
+    scaleControl: true,
+    //地図の種類
+    mapTypeId: google.maps.MapTypeId.ROADMAP
+  });
+  
+  var myMarker = new google.maps.Marker({
+    //マーカーを置く緯度経度
+    position: new google.maps.LatLng(35.690921, 139.700258),
+    map: myMap
+  });
+  var myInfoWindow = new google.maps.InfoWindow({
+    //吹き出しに出す文
+    content: "新宿駅で～す"
+  });
+  //吹き出しを開く
+  myInfoWindow.open(myMap, myMarker);
+  //吹き出しが閉じられたら、マーカークリックで再び開くようにしておく
+  google.maps.event.addListener(myInfoWindow, "closeclick", function() {
+    google.maps.event.addListenerOnce(myMarker, "click", function(event) {
+      myInfoWindow.open(myMap, myMarker);
+    });
+  });
+
+</script>
 
