--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,10 +24,10 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><%= link_to 'キーワード', '#' %></li>
-            <li><%= link_to '天気', '#' %></li>
-            <li><%= link_to '事故', '#' %></li>
-            <li><%= link_to '火事', '#' %></li>
+            <li><%= link_to 'キーワード', tweet_index_path %></li>
+            <li><%= link_to '天気', tweet_index_path(text:"天気") %></li>
+            <li><%= link_to '事故', tweet_index_path(text:"事故") %></li>
+            <li><%= link_to '火事', tweet_index_path(text:"火事") %></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
