--- a/app/views/tweet/index.html.erb
+++ b/app/views/tweet/index.html.erb
@@ -1,13 +1,93 @@
+<script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
+<script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
+
+<div>
+<%= form_tag(tweet_index_path ,{method: 'get'}) do %>
+  検索ワード：<%= text_field_tag 'text' , @text %>　<%= submit_tag "検索"  %>
+<% end %>
+</div>
+</br>
+</br>
 <div style='width: 800px;'>
-  <div id="map" style='width: 800px; height: 400px;'></div>
+  <div id="map" style='width: 900px; height: 600px;'></div>
+</div>
+<div style='width: 800px;'>
+  <div id="directions" style='width: 800px; height: 400px;'></div>
 </div>
 
-<script type="text/javascript">
-handler = Gmaps.build('Google');
-handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
-  markers = handler.addMarkers(<%=raw @hash.to_json %>);
-  handler.bounds.extendWith(markers);
-  handler.fitMapToBounds();
-});
-</script>
+<script type='text/javascript'>
+  //defaultアルメディアさんの座標
+  var latitude = "34.6831817";
+  var longitude = "135.497573";
 
+  $.get("<%= search_tweets_url %>",
+    { text: "<%= params[:text] %>", latitude: latitude, longitude: longitude },
+    function(data){
+      //リクエストが成功した際に実行する関数
+      setMap(JSON.stringify(data));
+    }
+  );
+
+  function setMap(tweet_datas){
+    //Geolocation APIに対応している
+    if(navigator.geolocation){
+      navigator.geolocation.getCurrentPosition(successFunc,errorFunc);
+    }else{
+      //現在位置を取得できない場合の処理
+      alert("Geolocation APIに対応していないため、現在位置を取得できません。");
+    }
+
+    var myMap = new google.maps.Map(document.getElementById("map"), {
+      //ズームレベル
+      zoom: 13,
+      //中心点緯度経度
+      center: new google.maps.LatLng(latitude, longitude),
+      //距離目盛りの表示
+      scaleControl: true,
+      //地図の種類
+      mapTypeId: google.maps.MapTypeId.ROADMAP
+    });
+    
+    var tweets = JSON.parse(tweet_datas);
+
+    for (var i = 0; i < tweets.length; i++){
+      var myMarker = new google.maps.Marker({
+        //マーカーを置く緯度経度
+        position: new google.maps.LatLng(tweets[i]["latitude"], tweets[i]["longitude"]),
+        map: myMap
+      });
+      var myInfoWindow = new google.maps.InfoWindow({
+        //吹き出しに出す文
+        content: '<table><tr><td><ul style="list-style:none"><li style="float:left"><img src="' + tweets[i]["icon"] + '"></li><li style="float:left">' + tweets[i]["user_name"] + '</li></ul></td></tr><tr><td><p>' + tweets[i]["text"] + '</p><tr><td></table>',
+        maxWidth: 200
+      });
+      //吹き出しを開く
+      myInfoWindow.open(myMap, myMarker);
+      //吹き出しが閉じられたら、マーカークリックで再び開くようにしておく
+      google.maps.event.addListener(myInfoWindow, "closeclick", function() {
+        google.maps.event.addListenerOnce(myMarker, "click", function(event) {
+          myInfoWindow.open(myMap, myMarker);
+        });
+      });  
+    }
+  }
+
+  function successFunc(position){
+    var latitude = position.coords.latitude;
+    var longitude = position.coords.longitude;
+  }
+
+  function errorFunc(error){
+    //エラーコードのメッセージを定義
+    var errorMessage = {
+      0: "原因不明のエラーが発生しました。",
+      1: "位置情報の取得が許可されていません。",
+      2: "電波状況などで位置情報が取得できませんでした。",
+      3: "処理がタイムアウトしました。",
+    };
+
+    //エラーコードに合わせたエラー内容をアラート表示
+    alert(errorMessage[error.code]);
+  }  
+
+</script>
