--- a/app/views/tweet/index.html.erb
+++ b/app/views/tweet/index.html.erb
@@ -1,11 +1,13 @@
 <script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
 <script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
 
+<% if @text != '天気' && @text != '事故' && @text != '火事' %>
 <div>
 <%= form_tag(tweet_index_path ,{method: 'get'}) do %>
   検索ワード：<%= text_field_tag 'text' , @text %>　<%= submit_tag "検索"  %>
 <% end %>
 </div>
+<% end %>
 </br>
 </br>
 <div style='width: 800px;'>
@@ -51,6 +53,7 @@
     var tweets = JSON.parse(tweet_datas);
 
     for (var i = 0; i < tweets.length; i++){
+      if (tweets[i]["longitude"] == ""){ next; }
       var myMarker = new google.maps.Marker({
         //マーカーを置く緯度経度
         position: new google.maps.LatLng(tweets[i]["latitude"], tweets[i]["longitude"]),
